tests/ui/impl-trait/in-trait/default-body-type-err-2.next.stderr
error[E0308]: mismatched types
  --> $DIR/default-body-type-err-2.rs:10:9
   |
LL |         42
   |         ^^- help: try using a conversion method: `.to_string()`
   |         |
   |         expected `String`, found integer

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
